<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="-60dp"
        android:src="@drawable/brand_watermark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@id/titleImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/brand_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.bosphere.fadingedgelayout.FadingEdgeLayout
        android:id="@+id/fading_edge_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:fel_edge="top"
        app:fel_size_top="20dp"
        app:layout_constraintTop_toBottomOf="@+id/titleImage"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/titleLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="45dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/searchDescription"
                    android:textColor="@color/textColor"
                    android:textFontWeight="300"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UnusedAttribute" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="35dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleLabel">


                    <Button
                        android:id="@+id/onlineButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_segment_left_seleted"
                        android:fontFamily="@font/poppins"
                        android:textFontWeight="500"
                        android:text="@string/online"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp"
                        style="?android:attr/buttonBarButtonStyle"
                        tools:ignore="UnusedAttribute" />

                    <Button
                        android:id="@+id/physicalButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/bg_segment_right"
                        android:fontFamily="@font/poppins"
                        android:textFontWeight="500"
                        android:text="@string/physical"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        style="?android:attr/buttonBarButtonStyle"
                        tools:ignore="UnusedAttribute" />

                </LinearLayout>

                <EditText
                    android:id="@+id/doctorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="45dp"
                    android:background="@drawable/bg_text_bordered"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/doctor_clinic_hospital"
                    android:importantForAutofill="no"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    tools:ignore="UnusedAttribute" />

                <LinearLayout
                    android:id="@+id/specialityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_text_bordered"
                    android:orientation="vertical"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="45dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/doctorEditText">

                    <Spinner
                        android:id="@+id/specialitySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/specialist"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/doctorEditText" />

                </LinearLayout>

                <EditText
                    android:id="@+id/locationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="45dp"
                    android:background="@drawable/bg_text_bordered"
                    android:drawableRight="@drawable/ic_map"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/governorate_city_s_area"
                    android:importantForAutofill="no"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/specialityLayout"
                    tools:ignore="UnusedAttribute" />

                <Button
                    android:id="@+id/actionButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/bg_button_solid"
                    android:enabled="false"
                    android:fontFamily="@font/poppins"
                    android:text="@string/search"
                    android:textAllCaps="false"
                    android:textColor="@color/colorSolidButtonText"
                    android:textColorHighlight="@color/colorSolidButtonText"
                    android:textColorLink="@color/colorSolidButtonText"
                    android:textFontWeight="400"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/locationEditText"
                    tools:ignore="UnusedAttribute" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.bosphere.fadingedgelayout.FadingEdgeLayout>

    <ProgressBar
        android:id="@+id/spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
